--- a/Projeto5/src/main/resources/application.properties
+++ b/Projeto5/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.h2.console.path=/h2
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 # Datasource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/hackathon?useSSL=false
